apps/report-ms/overlays/dev/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: report-ms
  name: report-ms
  namespace: apps-dev
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: report-ms
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: report-ms
  name: report-ms
  namespace: apps-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: report-ms
  template:
    metadata:
      labels:
        app: report-ms
    spec:
      containers:
        - env:
            - name: DB_USERNAME
              valueFrom:
                secretKeyRef:
                  key: username
                  name: postgres-aura-app
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: postgres-aura-app
            - name: DB_URL
              value: jdbc:postgresql://postgres-aura-rw:5432/aura
            - name: JAVA_TOOL_OPTIONS
              value: -XX:MaxRAMPercentage=75 -XX:InitialRAMPercentage=50
          image: 696085047789.dkr.ecr.ap-southeast-1.amazonaws.com/aura:report-ms
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 30
            timeoutSeconds: 5
          name: report-ms
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              cpu: "4"
              memory: 2Gi
            requests:
              cpu: 1
              memory: 1Gi
          startupProbe:
            failureThreshold: 40
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 5
            timeoutSeconds: 3
      imagePullSecrets:
        - name: ecr-pull
      serviceAccountName: report-ms
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: report-ms
  namespace: apps-dev
spec:
  gateways:
    - istio-ingress/public-gateway
  hosts:
    - api-dev.auraenterprise.solutions
  http:
    - route:
        - destination:
            host: report-ms.apps-dev.svc.cluster.local
            port:
              number: 8080
